--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <h1>Randomly Choose a Teacher</h1>
         <button id ="teacherButton">Click Me!</button>
         <div id ="teacherDisplay"></div>
+        
+        <h1>Add a Student</h1>
+        <input type="text" value="" id="namie">
+        <button id = "add">Submit</button>
 
         <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
         <script src = script.js></script>
